# LightTask

./: README.md
backend/: .gitignore  docker-compose.yml  pyproject.toml
backend/LightTaskApp/: .env.template  main.py
backend/LightTaskApp/core/: config.py
backend/LightTaskApp/core/models/: __init__.py  base.py
backend/src/: .env.template  config.py  database.py  main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 2025_10_20_2019-dc7acbdcab6e_create_users_table.py  2025_10_20_2035-88883bfa7cd3_update_users_table.py  2025_11_18_0445-1a7cb1bff5a9_create_users_table.py
backend/src/api/: __init__.py
backend/src/api/api_v1/: __init__.py  users.py
backend/src/api/api_v1/demo_auth/: crud.py  demo_jwt_auth.py  helpers.py  validation.py
backend/src/auth/: README.md  utils_jwt.py
backend/src/core/: config.py
backend/src/core/models/: __init__.py  db_helper.py
backend/src/core/schemas/: user.py
