[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.118.0",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.10",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
